--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@mui/icons-material": "^7.3.4",
     "@mui/material": "^7.3.4",
     "@mui/material-nextjs": "^7.3.3",
+    "@supabase/supabase-js": "^2.86.0",
     "@t3-oss/env-nextjs": "^0.12.0",
     "next": "^15.2.3",
     "react": "^19.0.0",
