--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-toastify": "^11.0.5",
+    "resend": "^6.5.2",
     "zod": "^3.24.2"
   },
   "devDependencies": {
