--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.35.5",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@emotion/cache": "^11.14.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
@@ -25,10 +28,17 @@
     "@mui/material-nextjs": "^7.3.3",
     "@supabase/supabase-js": "^2.86.0",
     "@t3-oss/env-nextjs": "^0.12.0",
+    "docx": "^9.5.1",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^4.0.0",
     "next": "^15.2.3",
+    "openai": "^6.16.0",
+    "pptxgenjs": "^4.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-markdown": "^10.1.0",
     "react-toastify": "^11.0.5",
+    "remark-gfm": "^4.0.1",
     "resend": "^6.5.2",
     "zod": "^3.24.2"
   },
