--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-toastify": "^11.0.5",
     "remark-gfm": "^4.0.1",
     "resend": "^6.5.2",
+    "xlsx": "^0.18.5",
     "zod": "^3.24.2"
   },
   "devDependencies": {
